# mettail-rust

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DEMO.md  LICENSE  QUICKSTART.md  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.metals/: metals.lock.db
docs/: ASCENT-ORGANIZATION-PLAN.md  AUTO-FLATTENING-COMPLETE.md  CLEANUP-COMPLETE.md  CURRENT-STATUS.md  DOCUMENTATION-GUIDE.md  EQUATION-SYSTEM-COMPLETE.md  IDE-LINTING-NOTES.md  IMPLEMENTATION-SUMMARY.md  KNOWN-LIMITATIONS.md  MACROS-ARCHITECTURE-ASSESSMENT.md  MACROS-REFACTOR-PROGRESS.md  MACROS-REFACTORING-COMPLETE.md  PHASE-NAMING.md  POLY-LINGUAL-ROADMAP.md  README.md  REPL-GUIDE.md  REPL-PERFORMANCE-NOTES.md  REPL-PHASE-1-COMPLETE.md  REPL-SESSION-SUMMARY.md  REVISED-STRUCTURE.md  ROADMAP.md  TODO-TERM-GENERATION.md  VAR-IDENTITY-SOLUTION.md  VARIABLE-EQUALITY-IMPLEMENTATION.md  WORKSPACE-CLEANUP-ASSESSMENT.md  architecture.md  main_goals.md  to_do.md
docs/archive/: ASCENT-GENERATION-DESIGN.md  poly_lingual_roadmap.md  reorganization_summary.md
docs/archive/phase-1/: BINDER-DESIGN.md  BINDER-SHADOWING-FIX.md  FOUNDATION-REVIEW.md  PHASE-1-CRITICAL-ANALYSIS.md  PHASE-1-PLAN.md  POC-RESULTS.md  PROGRESS.md  REPL-PHASE-1-COMPLETE.md  REPL-SESSION-SUMMARY.md  REWRITE-RULES-COMPLETE.md  WEEK-3-SUMMARY.md
docs/archive/phase-2/: LALRPOP-DESIGN.md  NEXT-SESSION.md  PARSING-SUCCESS.md  PHASE-2-COMPLETE.md  PRECEDENCE-SUCCESS.md  QUICK-START.md  REWRITE-ENGINE-COMPLETE.md  SESSION-SUMMARY.md  WEEK-1-PROGRESS.md
docs/archive/phase-3/: COLLECTION-MATCHING-LIMITATION.md  COLLECTION-MATCHING-SOLUTION.md  COLLECTION-TYPES-CHECKLIST.md  COLLECTION-TYPES-SESSION-SUMMARY.md  CONGRUENCE-RULES-DESIGN.md  INDEXED-PROJECTION-AUTOMATION-PLAN.md  NORMAL-FORMS-COMPLETE.md  PERFORMANCE-ANALYSIS.md  PERFORMANCE-OPTIMIZATIONS-APPLIED.md  PHASE-6.1-COMPLETE.md  REST-PATTERNS-DESIGN.md  REWRITE-EQUATIONAL-MATCHING.md  REWRITE-NESTING-FIXED.md  SESSION-EQUATIONAL-REWRITE.md  SORTING-DESIGN.md  TERM-GENERATION-COMPLETE.md  VAR-IDENTITY-SOLUTION.md
docs/archive/phase-6/: AMBIENT-TEST-PLAN.md  AUTO-FLATTENING-COMPLETE.md  BINDING-CONGRUENCE-FIXED.md  COLLECTION-TYPES-DESIGN.md  CONGRUENCE-DRIVEN-PROJECTIONS.md  EQUATION-IMPLEMENTATION-PLAN.md  EQUATION-IMPLEMENTATION-REVISED.md  EQUATION-SYSTEM-COMPLETE.md  PHASE-6-COMPLETE.md  PPAR-FLATTENING-NEEDED.md  REST-PATTERNS-COMPLETE.md  ascent_organization.md  repl_next_steps.md
docs/design/: AMBIENT-TEST-PLAN.md  ASCENT-PARALLEL-ISSUE.md  AUTO-FLATTEN-SESSION-SUMMARY.md  BINDER-SHADOWING-FIX.md  COLLECTION-CONGRUENCE-COMPLETION.md  COLLECTION-CONGRUENCE-REDESIGN.md  COLLECTION-PATTERN-FIX.md  COLLECTION-TYPES-DESIGN.md  CONGRUENCE-DRIVEN-PROJECTIONS.md  CONGRUENCE-GENERATION-STATUS.md  CONGRUENCE-IMPLEMENTATION-STATUS.md  CONGRUENCE-RULES-DESIGN.md  DEEP-PROJECTION-DESIGN.md  DEEP-PROJECTION-ROADMAP.md  EQUATION-GENERATION-ISSUE.md  EQUATION-GENERATION-LIMITATIONS.md  MULTIPLE-REST-PATTERNS-ANALYSIS.md  PERFORMANCE-ANALYSIS.md  PERFORMANCE-FIX-COMPLETE.md  PHASE-1-TO-2-TRANSITION.md  PPAR-FLATTENING-NEEDED.md  REMAINING-ISSUES.md  REST-PATTERNS-IMPLEMENTATION.md  REWRITE-NESTING-FIXED.md  RHOCALC-EXAMPLES.md  SUBSTITUTION-CROSS-CATEGORY-FIX.md  TERM-EXPLORER-REPL-DESIGN.md  TERM-GENERATION-ASSUMPTIONS.md  TERM-GENERATION-COMPLETE.md  VARIABLE-TYPING-ANALYSIS.md
docs/design/exploring/: ascent_parallel_issue.md  k_framework_comparison.md  performance.md  questions.md  redex_guided_generation.md  theory_composition.md
docs/design/made/: ascent_generation.md  automatic-var-refactor-plan.md  blockly_generation.md  data_structures.md  repl.md
docs/guides/: macros.md  repl.md
docs/meta/: contributing.md
docs/phase-1/: FOUNDATION-REVIEW.md  PHASE-1-COMPLETE.md  POC-RESULTS.md  WEEK-3-SUMMARY.md
docs/phase-1/initial/: 00-PROJECT-UNDERSTANDING.md  01-MINIMAL-POC.md  05-ARCHITECTURE-DIAGRAMS.md
docs/phase-1/substitution/: MONIKER-BUG.md  MONIKER-INTEGRATION.md  (+2 more)
docs/phase-2/: LALRPOP-DESIGN.md  NEXT-SESSION.md  PARSING-TEST-GUIDE.md  PRECEDENCE-SUCCESS.md  REWRITE-ENGINE-COMPLETE.md
examples/: Cargo.toml  ambient.rs  ambient.rs.old  ambient_demo.rs  ambient_tests.rs  build.rs  calculator_demo.rs  congruence_tests.rs  env_infrastructure_verify.rs  equation_tests.rs  lambda_calc.rs  rhocalc.rs  rhocalc.rs.old  rhocalc_demo.rs  rhocalc_env_test.rs  rhocalc_tests.rs
examples/src/: ambient.lalrpop  lib.rs  rho_gen.rs  rhocalc.lalrpop  rhocalc_theory.rs
macros/src/: lib.rs  utils.rs
macros/tests/: grammar_output.rs
mettail-macros/: Cargo.toml
mettail-macros/src/: ascent_gen.rs  ast.rs  codegen.rs  congruence_analysis.rs  display_gen.rs  error.rs  generation.rs  grammar_writer.rs  lalrpop_gen.rs  lib.rs  old-projection.rs  parser_gen.rs  random_generation.rs  rewrite_gen.rs  subst_gen.rs  substitution.rs  termgen_gen.rs  typechecker.rs  utils.rs  validator.rs
mettail-macros/tests/: compile_fail_tests.rs  grammar_output.rs
mettail-macros/tests/compile_fail/: undefined_category_reference.rs  unknown_constructor.rs  unknown_constructor.stderr
mettail-repl/: Cargo.toml
mettail-repl/src/: ambcalc.lalrpop  ambcalc_theory.rs  examples.rs  lib.rs  pretty.rs  registry.rs  repl.rs  rhocalc.lalrpop  rhocalc_theory.rs  state.rs  theory.rs
mettail-runtime/: Cargo.toml  build.rs
mettail-runtime/src/: lib.rs
mettail-runtime/tests/: rhocalc_full_parsing_tests.rs
repl/: Cargo.toml
repl/src/: lib.rs  main.rs  pretty.rs  registry.rs  repl.rs  state.rs  theory.rs
runtime/: Cargo.toml
runtime/src/: binding.rs  hashbag.rs  lib.rs
theories/: Cargo.toml  build.rs  rho_gen.rs  rhocalc.lalrpop  rhocalc.rs
theories/src/: ambient.rs  calculator.rs  lib.rs  rhocalc.rs  space.rs
theories/tests/: calculator.rs
(+72 files in other folders)
