[workspace]
members = ["mettail-macros", "mettail-runtime", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MeTTaIL Contributors"]
license = "MIT"
repository = "https://github.com/your-username/mettail-rust"
homepage = "https://github.com/your-username/mettail-rust"

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro-error = "1.0"
lalrpop = "0.20"
lalrpop-util = "0.20"
regex = "1.0"
