[package]
name = "mettail-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rhocalc"
path = "rhocalc.rs"

[[bin]]
name = "ambient"
path = "ambient.rs"

[[bin]]
name = "test_ascent_gen"
path = "test_ascent_gen.rs"

[dependencies]
mettail-macros = { path = "../mettail-macros" }
mettail-runtime = { path = "../mettail-runtime" }
moniker = { workspace = true }
lalrpop-util = { workspace = true, features = ["lexer"] }
ascent = { workspace = true }
rand = { workspace = true }
ascent-byods-rels = { workspace = true }


[build-dependencies]
lalrpop = { workspace = true }