[package]
name = "mettail-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rhocalc"
path = "rhocalc.rs"

[[bin]]
name = "ambient"
path = "ambient.rs"

[[bin]]
name = "test_collections"
path = "test_collections.rs"

[[bin]]
name = "test_coll_simple"
path = "test_coll_simple.rs"

[[bin]]
name = "test_minimal"
path = "test_minimal.rs"

[[bin]]
name = "test_just_enum"
path = "test_just_enum.rs"

[[bin]]
name = "test_rest_patterns"
path = "test_rest_patterns.rs"

[dependencies]
mettail-macros = { path = "../mettail-macros" }
mettail-runtime = { path = "../mettail-runtime" }
moniker = { workspace = true }
lalrpop-util = { workspace = true, features = ["lexer"] }
ascent = { workspace = true }
rand = { workspace = true }
ascent-byods-rels = { workspace = true }


[build-dependencies]
lalrpop = { workspace = true }