[package]
name = "mettail-macros"
version = "0.1.0"
edition = "2021"
authors = ["MeTTaIL Contributors"]
license = "MIT"
description = "Procedural macros for MeTTaIL - a meta-language framework for defining formal languages"
repository = "https://github.com/your-username/mettail-rust"
homepage = "https://github.com/your-username/mettail-rust"
keywords = ["language", "rewriting", "theory", "macros", "metaprogramming"]
categories = ["development-tools", "parser-implementations"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro-error = { workspace = true }
ascent = { workspace = true }
ascent-byods-rels = { workspace = true }
moniker = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
