[package]
name = "mettail-theories"
version = "0.1.0"
edition = "2021"

# Library only - no binaries
# Examples are in workspace examples/ directory
# Tests use separate test binaries



[dependencies]
mettail-macros = { path = "../macros" }
mettail-runtime = { path = "../runtime" }
moniker = { workspace = true }
lalrpop-util = { workspace = true, features = ["lexer"] }
ascent = { workspace = true }
rand = { workspace = true }
ascent-byods-rels = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }

[[example]]
name = "rhocalc_demo"
path = "../examples/rhocalc_demo.rs"

[[example]]
name = "ambient_demo"
path = "../examples/ambient_demo.rs"

[[example]]
name = "calculator_demo"
path = "../examples/calculator_demo.rs"

[[bin]]
name = "ambient_tests"
path = "../examples/ambient_tests.rs"

[[bin]]
name = "rhocalc_tests"
path = "../examples/rhocalc_tests.rs"